[gd_scene load_steps=19 format=2]

[ext_resource path="res://2D/Enemies/Rat/rat5.png" type="Texture" id=1]
[ext_resource path="res://2D/Enemies/Rat/rat6.png" type="Texture" id=2]
[ext_resource path="res://2D/Enemies/Rat/rat7.png" type="Texture" id=3]
[ext_resource path="res://2D/Enemies/Rat/rat8.png" type="Texture" id=4]
[ext_resource path="res://2D/Enemies/Rat/rat1.png" type="Texture" id=5]
[ext_resource path="res://2D/Enemies/Rat/rat4.png" type="Texture" id=6]
[ext_resource path="res://2D/Enemies/Rat/rat3.png" type="Texture" id=7]
[ext_resource path="res://2D/Enemies/Rat/rat2.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Monsters/Rat/IDLE.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Monsters/Rat/States.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Monsters/Rat/WALK.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Monsters/Rat/rat.gd" type="Script" id=12]
[ext_resource path="res://2D/GUI/bar.png" type="Texture" id=13]
[ext_resource path="res://2D/GUI/bar top.png" type="Texture" id=14]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
params_depth_draw_mode = 3
params_billboard_mode = 1
params_billboard_keep_scale = true

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape" id=2]
radius = 0.0540744
height = 0.0437874

[sub_resource type="Animation" id=4]
resource_name = "Walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.5, 0.5, 0.5 ), Vector3( 0.6, 0.6, 0.5 ), Vector3( 0.5, 0.5, 0.5 ) ]
}

[node name="Rat" type="RigidBody" groups=[
"Enemy",
]]
mode = 2
script = ExtResource( 12 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.535145, 0, 0, 0, 0.343984, -0.383022, 0, 0.409945, 0.321394, 0, 0, 0 )
material_override = SubResource( 3 )
frames = SubResource( 1 )
animation = "IDLE"

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 2 )

[node name="States" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
script = ExtResource( 10 )

[node name="IDLE" type="Spatial" parent="States"]
script = ExtResource( 9 )

[node name="WALK" type="Spatial" parent="States"]
script = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 4 )

[node name="ChangeStatus" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Healthbar" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.101374, -0.0016899 )

[node name="Viewport" type="Viewport" parent="Healthbar"]
arvr = true
size = Vector2( 100, 32 )
transparent_bg = true
usage = 0
render_target_v_flip = true

[node name="Healthbar" type="TextureProgress" parent="Healthbar/Viewport"]
margin_left = 45.0
margin_top = 20.0
margin_right = 145.0
margin_bottom = 52.0
rect_scale = Vector2( 0.1, 0.05 )
max_value = 20.0
value = 20.0
texture_under = ExtResource( 13 )
texture_over = ExtResource( 14 )
texture_progress = ExtResource( 13 )
tint_under = Color( 1, 0, 0, 1 )
tint_progress = Color( 0.960784, 0.92549, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetHurt" type="Timer" parent="."]
[connection signal="timeout" from="ChangeStatus" to="." method="_on_ChangeStatus_timeout"]
[connection signal="timeout" from="GetHurt" to="." method="_on_GetHurt_timeout"]
